# hbridge

./: .gitignore  .project-settings.yml  README.md  hand  hbridge.cabal
src/: Bidding.hs  Hand.hs  Main.hs  Solver.hs
src/Solver/: Generic.hs  Interactive.hs
